Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - host: my-burr.apps.aws.burrsutter.org
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp
          servicePort: 8080
